[ADD] Add base for landing page, very advance, just need to fix spacing and colors, also fonts added

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,8 @@
-body {
-  overflow: auto;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
 }
-
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
 
 :root {
